import "rpc.proto";
import "xrts_model.proto";
import "common_model.proto";

option java_package = "nta.med.service.ihis.proto";
option java_outer_classname = "XrtsServiceProto";
option (version) = "1.0.0";
option (service) = "xrts";

// --- [START] XRT0000Q00 ---

message XRT0000Q00GetModalityCodeRequest{
	optional string hangmog_code = 1;
}
message XRT0000Q00GetModalityCodeResponse{
    optional string modality = 1;
}

message XRT0000Q00LayPacsInfoRequest{
	optional string code_type = 1;
}
message XRT0000Q00LayPacsInfoResponse{
	repeated XRT0000Q00LayPacsInfoListItemInfo layPacsInfo_list = 1;
}

message XRT0000Q00InitializeRequest{
	optional string sort_layOrder = 1;
	optional string bunho_layOrder = 2;
	optional string jundal_part_layOrder = 3;
        
}
message XRT0000Q00InitializeResponse{
	repeated XRT0000Q00LayOrderListItemInfo layOrder_list = 1;
	repeated XRT0000Q00LayMakeTabPageListItemInfo layMakeTabPage_list = 2;
}
// --- [END] XRT0000Q00 ---

//-----[START] XRT7001Q01---------
//remove this request
message XRT7001Q01CboPartRequest{
	optional string code_type = 1;
}
message XRT7001Q01CboPartResponse{
	repeated ComboListItemInfo cboPart_list = 1;
}

message XRT7001Q01LayRadioHistoryRequest{
	optional string bunho = 1;
	optional string part_code = 2;
}
message XRT7001Q01LayRadioHistoryResponse{
	repeated XRT7001Q01LayRadioHistoryListItemInfo layRadioHistory_list = 1;
}

//-----[END] XRT7001Q01----------

//------[START] XRT9001R01-------------
message XRT9001R01Lay9001RRequest{
	optional string date = 1;
}
message XRT9001R01Lay9001RResponse{
	repeated XRT9001R01Lay9001RListItemInfo lay9001R_list = 1;
}
//------[END] XRT9001R01---------------

//------[START] XRT9001R03-------
message XRT9001R03Lay9003RRequest{
	optional string date = 1;
}
message XRT9001R03Lay9003RResponse{
	repeated XRT9001R03Lay9003RListItemInfo lay9003R_list = 1;
}
//------[END] XRT9001R03--------

//--------[START] XRT0101U00---------------
//redefine
message XRT0101U00GrdMcodeRequest
{
	optional string code_type = 1;
}
message XRT0101U00GrdMcodeResponse
{
	repeated XRT0101U00GrdMcodeInfo mcode_item = 1;
}
message XRT0101U00GrdDcodeRequest
{
	optional string code_type = 1;
}
message XRT0101U00GrdDcodeResponse
{
	repeated XRT0101U00GrdDcodeInfo dcode_item = 1;
}
message XRT0101U00LayDupDRequest
{
	optional string code_type           = 1;
	optional string code                = 2;
}
message XRT0101U00LayDupResponse
{
	optional string result = 1;
}
message XRT0101U00LayDupMRequest
{
	optional string code_type           = 1;
}
message XRT0101U00SaveLayoutRequest
{
	optional string user_id = 1;
	repeated XRT0101U00SaveLayoutInfo save_layout_item = 2;
}
//--------[END] XRT0101U00--------------

//--------[START] XRT0001U00---------------
//re define
message XRT0001U00GrdRadioListRequest
{
	optional string xray_code = 1;
}
message XRT0001U00GrdRadioListResponse
{
	repeated XRT0001U00GrdRadioListInfo grd_radio_item = 1;
}
message XRT0001U00GrdXRTRequest
{
	optional string txtParam              = 1;
	optional string xray_gubun            = 2;
	optional string special_yn            = 3;
}
message XRT0001U00GrdXRTResponse
{
	repeated XRT0001U00GrdXRTInfo grd_xrt_item = 1;
}
message XRT0001U00LayDupRequest
{
	optional string xray_code = 1;
}
message XRT0001U00LayDupResponse
{
	optional string result = 1;
}
message XRT0001U00FbxDataValidatingRequest
{
	optional string fb_name = 1;
	optional string code = 2;
}
message XRT0001U00FbxDataValidatingResponse
{
	optional string code_name = 1;
}
message XRT0001U00MakeFindWorkerRequest
{
	optional string ctr_name = 1;
	optional string find1 = 2;
}
message XRT0001U00SaveLayoutRequest
{
	optional string user_id = 1;
	repeated XRT0001U00SaveLayoutInfo save_layout_item = 2;
}
//--------[END] XRT0001U00-----------------
	
//-------- [START] XRT0123U00 -------------
//re define
message XRT0123U00grdMCodeRequest{
	optional string xray_gubun = 1;
}
message XRT0123U00grdMCodeResponse{
	 repeated ComboListItemInfo list_grd= 1;
}
message XRT0123U00GrdDCodeRequest {
	optional string xray_gubun = 1; 
	optional string buwi_code = 2;
}
message XRT0123U00GrdDCodeResponse {
	repeated XRT0123U00GrdDCodeItemInfo list_info = 1;
}
message XRT0123U00XEditGridCell3Request {
	
}
message XRT0123U00XEditGridCell3Response {
	repeated ComboListItemInfo cbo_cell = 1;   
}
message XRT0123U00LayDupDRequest {
	optional string xray_gubun = 1; 
	optional string buwi_code = 2;
}
message XRT0123U00LayDupDResponse {
	optional string yn_value = 1; 	
}
message XRT0123U00SaveLayoutRequest {
	optional string user_id = 1; 
	repeated XRT0123U00GrdDCodeItemInfo input_list = 2;
}	
//-------- [END] XRT0123U00 -------------

//-------- [START] XRT0122U00 -------------
// re define
message XRT0122U00GrdMcodeRequest
{
	optional string buwi_bunryu = 1;
}
message XRT0122U00GrdMcodeResponse
{
	repeated XRT0122U00GrdMcodeInfo mcode_item = 1;
}
message XRT0122U00GrdDcodeRequest
{
	optional string buwi_name            = 1;
	optional string buwi_code            = 2;
	optional string flag                 = 3;
	optional string buwi_bunryu          = 4;
}
message XRT0122U00GrdDcodeResponse
{
	repeated XRT0122U00GrdDcodeInfo dcode_item = 1;
}
message XRT0122U00LayDupMRequest
{
	optional string buwi_bunryu = 1;
}
message XRT0122U00LayDupResponse
{
	optional string dup_yn = 1;
}
message XRT0122U00LayDupDRequest
{
	optional string buwi_bunryu = 1;
	optional string buwi_code         = 2;
}
message XRT0122U00SaveLayoutRequest
{
	optional string user_id               = 1;
	repeated XRT0122U00SaveLayoutInfo save_layout_item         = 2;
}
//-------- [END] XRT0122U00 -------------

//------ [START] XRT0201U00 ------------
message XRT0201U00LoadScreenRequest {
    optional string query_date = 1;
    optional string io_gubun = 2;
    optional string act_gubun = 3;
    optional string jundal_table_code = 4;
    optional string jundal_part = 5;
    optional string bunho = 6;
    optional string from_date = 7;
    optional string to_date = 8;
}
message XRT0201U00LoadScreenResponse {
    repeated XRT0201U00CbxActorItemInfo cbx_actor_item_info = 1;
    repeated XRT0201U00GrdPaListItemInfo grd_pa_list_item_info = 2; 
}
message XRT0201U00GrdPaListRequest {
    optional string io_gubun = 1;
    optional string act_gubun = 2;
    optional string jundal_table_code = 3;
    optional string jundal_part = 4;
    optional string bunho = 5;
    optional string from_date = 6;
    optional string to_date = 7;
}
message XRT0201U00GrdPaListResponse {
    repeated XRT0201U00GrdPaListItemInfo grd_pa_list_item_info = 1;
}
message XRT0201U00GrdOrderRequest{
    optional string io_gubun = 1;
    optional string act_gubun = 2;
    optional string reser_yn = 3;
    optional string order_date = 4;
    optional string from_date = 5;
    optional string to_date = 6;
    optional string naewon_key = 7;
    optional string emergency = 8;
    optional string jundal_table_code = 9;
    optional string jundal_part = 10;
    optional string bunho = 11;
    optional string doctor = 12;
}
message XRT0201U00GrdOrderResponse{
    repeated XRT0201U00GrdOrderItemInfo grd_order_item_info = 1;
}
message XRT0201U00GrdOrderRowFocusChangedRequest{
    optional string bunho = 1;
    optional string order_date = 2;
    optional string io_gubun = 3;
    optional string jundal_part = 4;
    optional string fkocs = 5;
	optional string grd_order_row_count = 6;
	optional string hangmog_code = 7;
}
message XRT0201U00GrdOrderRowFocusChangedResponse{
    repeated XRT0201U00GrdJaeryoItemInfo grd_jaeryo_item_info = 1;
    repeated DataStringListItemInfo sang_name = 2;
    repeated XRT0201U00DefaultJearyoItemInfo default_jearyo_item_info = 3;
}
message XRT0201U00LayPacsRequest{
    optional string hangmog_code = 1;
}
message XRT0201U00LayPacsResponse{
    repeated XRT0000Q00LayPacsInfoListItemInfo lay_pacs_item_info = 1;
    optional string modality = 2;
}

message XRT0201U00DataSendYnRequest{
	optional string in_out_gubun = 1;
	optional string pkocs = 2;
}
message XRT0201U00DataSendYnResponse{
	optional string result = 1;
}


message XRT0201U00FwkOrdDanuiRequest{
	optional string hangmog_code = 1;
}

message XRT0201U00FwkOrdDanuiNameRequest{
	optional string hangmog_code = 1;
}

message XRT0201U00FwkOrdDanuiResponse{
	repeated XRT0201U00FwkOrdDanuiItemInfo fwk_ord_danui_item_info = 1;
}


message XRT0201U00NaewonDateRequest{
	optional string naewon_key = 1;
}

message XRT0201U00NaewonDateResponse{
	optional string naewon_date = 1;
}

message XRT0201U00MentRequest{
}

message XRT0201U00MentResponse{
	optional string ment = 1;
}

message XRT0201U00GrdJaeryoColumnChangedRequest{
	optional string hangmog_code = 1;
	optional string s_hangmog_code = 2;
}

message XRT0201U00GrdJaeryoColumnChangedResponse{
	repeated XRT0201U00GrdJaeryoColumnChangedItemInfo grd_jaeryo_item_info = 1;
}

message XRT0201U00FwkActorRequest{
}

message XRT0201U00FwkActorResponse{
	repeated ComboListItemInfo user_item_info = 1;
}
message XRT0201U00OcsCommonRequest{
	optional string user_id = 1;
}

message XRT0201U00OcsCommonResponse{
	repeated DataStringListItemInfo user_name_item_info = 1;
}

message XRT0201U00CheckNaewonYnRequest{
	optional string pkout1001 = 1;
}

message XRT0201U00CheckNaewonYnResponse{
	optional string result = 1;
}
message XRT0201U00GrdRadioListRequest{
	optional string order_date = 1;
	optional string bunho = 2;
	optional string in_out_gubun = 3;
}
message XRT0201U00GrdRadioListResponse{
	repeated XRT0201U00GrdRadioListItemInfo grd_radio_list_item_info = 1;
}
message XRT0201U00RadioSaveLayoutRequest{
	repeated XRT0201U00GrdRadioListItemInfo grd_radio_list_item_info = 1;
	optional string user_id = 2;
}
message XRT0201U00LayConstantRequest{
}

message XRT0201U00LayConstantResponse{
	repeated XRT0000Q00LayPacsInfoListItemInfo lay_constant_item_info = 1;
	optional string alarm_file_path_xrt = 2;
	optional string alarm_file_path_xrt_em = 3;
}
message XRT0201U00SaveLayoutRequest{
	repeated XRT0201U00GrdOrderItemInfo grd_order_item_info = 1;
	repeated XRT0201U00GrdJaeryoItemInfo grd_jaeryo_item_info = 2;
	optional XRT0201U00GrdPaListItemInfo grd_pa_list_current_row = 3;
	optional XRT0201U00GrdOrderItemInfo grd_order_current_row = 4;
	optional string use_radio_yn = 5;
	optional bool rbx_jubsu = 6;
	optional bool rbx_act = 7;
	optional bool rbx_act_end = 8;
	optional bool rbx_act_upd_jaeryo_yn = 9;
	optional bool rbx_act_end_upd_jaeryo_yn = 10;
	optional string user_id = 11;
}
//------ [END] XRT0201U00 ------------

//------ [START] XRT1002U00 ------------
message XRT1002U00DsvLDOCS0801Request {
    optional string hangmog_code = 1;
}

message XRT1002U00DsvLDOCS0801Response {
    repeated XRT1002U00DsvLDOCS0801Info dsv_ld_item = 1;
}

message XRT1002U00DsvRequestDataRequest {
    optional string fkocs = 1;
}

message XRT1002U00DsvRequestDataResponse {
    repeated XRT1002U00DsvRequestDataInfo dsv_req_data_item = 1;
}

message XRT1002U00DsvSideEffectRequest {
	optional string bunho = 1;
}

message XRT1002U00DsvSideEffectResponse {
	repeated XRT1002U00DsvSideEffectInfo dsv_side_effect_item = 1;
}

message XRT1002U00GrdComment3Request {
	optional string bunho          = 1;
	optional string order_date     = 2;
}

message XRT1002U00GrdComment3Response {
	repeated XRT1002U00GrdComment3Info grd_comment_item = 1;
}

message XRT1002U00GrdPaStatusRequest {
	optional string bunho                    = 1;
	optional string hangmog_code             = 2;
}

message XRT1002U00GrdPaStatusResponse {
	repeated XRT1002U00GrdPaStatusInfo grd_pa_status_item = 1;
}

message XRT1002U00LayCPLRequest {
	optional string bunho = 1;
}

message XRT1002U00LayCPLResponse {
	repeated XRT1002U00LayCPLInfo lay_cpl_item = 1;
}

message XRT1002U00LayOrderByJundalPartRequest {
	optional string order_date               = 1;
	optional string in_out_gubun             = 2;
	optional string fkout1001                = 3;
	optional string print_date               = 4;
	optional string print_only               = 5;
	optional string jundal_part              = 6;
	optional string pkocs                    = 7;
	optional string fkinp1001                = 8;        
}

message XRT1002U00LayOrderByJundalPartResponse {
	repeated XRT1002U00LayOrderByJundalPartInfo lay_order_by_jund_item = 1;
}

message XRT1002U00LayOrderDateRequest {
	optional string bunho = 1;
}

message XRT1002U00LayOrderDateResponse {
	repeated XRT1002U00LayOrderDateInfo lay_order_date_item = 1;
}

message XRT1002U00LayPrintDateRequest {
	optional string order_date               = 1;
	optional string in_out_gubun             = 2;
	optional string fkout1001                = 3;
	optional string print_only               = 4;
	optional string jundal_part              = 5;
	optional string pkocs                    = 6;
	optional string fkinp1001                = 7;
}

message XRT1002U00LayPrintDateResponse {
	repeated XRT1002U00LayPrintDateInfo lay_print_date_item = 1;
}

message XRT1002U00LayPrintOrderRequest {
	optional string order_date              = 1;
	optional string gwa                     = 2;
	optional string in_out_gubun            = 3;
	optional string pkocs                   = 4;
}

message XRT1002U00LayPrintOrderResponse {
	repeated XRT1002U00LayPrintOrderInfo lay_print_order_item = 1;
}

message XRT1002U00LayXRT0123Request {
	optional string buwi_code         = 1;
	optional string xray_gubun        = 2;
	optional string age               = 3;
}

message XRT1002U00LayXRT0123Response {
	repeated XRT1002U00LayXRT0123Info lay_xrt_item = 1;
}

message XRT1002U00BtnDeleteClickRequest {
	optional string fkocs = 1;
}

message XRT1002U00PrintOrderByJudalPartRequest {
	optional string bunho          = 1;
	optional string hangmog_codes  = 2;
}

message XRT1002U00PrintOrderByJudalPartResponse {
	repeated XRT1002U00GrdPaStatusInfo grd_pa_status_item = 1;
}

message XRT1002U00UpdateRequest {
	optional string fkocs                                  = 1;
	optional string upd_id                                 = 2;
	optional string in_out_gubun                           = 3;
	optional string hangmog_code                           = 4;
	optional string bunho                                  = 5;
	optional string gumsa_mokjuk                           = 6;
	optional string xray_method                            = 7;
	optional string pandok_request_yn                      = 8;
	repeated XRT1002U00GrdPaStatusInfo grd_pa_item         = 9;
}
message XRT1002U00GrdComment2Request
{
	optional string bunho          = 1;
}
message XRT1002U00GrdComment2Response
{
	repeated XRT1002U00GrdCommentInfo grd_comment_item = 1;
}
message XRT1002U00GrdComment1Request
{
	optional string bunho          = 1;
}
message XRT1002U00GrdComment1Response
{
	repeated XRT1002U00GrdCommentInfo grd_comment_item = 1;
}
message XRT1002U00GrdXrayMethodRequest
{
	optional string code_type = 1;
}
message XRT1002U00DsvBuhaGubunRequest
{
	optional string code_type = 1;
}
message XRT1002U00DsvXrayGubunRequest
{
	optional string code = 1;
}
message XRT1002U00DsvXrayGubunResponse
{
	repeated XRT1002U00DsvXrayGubunInfo xray_gubun_item = 1;
}
//------ [END] XRT1002U00 ------------

//------ [START] XRT0101U01 ------------
message XRT0101U01LayDupMRequest{
	optional string code_type = 1;
}

message XRT0101U01LayDupMResponse{
	optional string y_value = 1;
}

message XRT0101U01SaveLayoutRequest{
	optional string user_id = 1;
	repeated XRT0101U01GrdMcodeListItemInfo input_mCode = 2;
	repeated XRT0101U01GrdDcodeListItemInfo input_dCode = 3;
}

message XRT0101U01GrdDcodeRequest{
	optional string code_type = 1;
	optional string code = 2;
	optional string code_name = 3;
}

message XRT0101U01GrdDcodeResponse{
	repeated XRT0101U01GrdDcodeListItemInfo grd_list = 1;
}

message XRT0101U01GrdMcodeRequest{
	optional string code_type = 1;
}

message XRT0101U01GrdMcodeResponse{
	repeated XRT0101U01GrdMcodeListItemInfo grd_list = 1;
}

message XRT0101U01LayDupDRequest{
	optional string code_type = 1;
	optional string code = 2;
}

message XRT0101U01LayDupDResponse{
	optional string y_value = 1;
}

//------ [END] XRT0101U01 ------------

//[START] XRT0122Q00
message Xrt0122Q00GrdDCodeRequest{
	optional string buwi_bunryu = 1;
	optional string flag = 2;
	optional string buwi_code = 3;
	optional string buwi_name = 4;
}
message Xrt0122Q00GrdDCodeResponse{
	repeated Xrt0122Q00GrdDCodeListItemInfo info_list = 1;
}
message Xrt0122Q00LayDupDRequest{
	optional string buwi_bunryu = 1;
	optional string buwi_code = 2;
}
message Xrt0122Q00LayDupDResponse{
	optional string y_value = 1;
}
message Xrt0122Q00GrdMCodeRequest{
	optional string buwi_bunryu = 1;
}
message Xrt0122Q00GrdMCodeResponse{
	repeated ComboListItemInfo info_list = 1;
}
message Xrt0122Q00LayDupMRequest{
	optional string buwi_bunryu = 1;
}
message Xrt0122Q00LayDupMResponse{
	optional string y_value = 1;
}
message Xrt0122Q00LayCodeNameRequest{
	optional string code = 1;
}
message Xrt0122Q00LayCodeNameResponse{
	optional string code_name = 1;
}
//[END] XRT0122Q00
// [START] XRT0201U00
message XRT0201U00ToolTipRequest{
    optional string hosp_code = 1;
    optional string bunho = 2;
}

message XRT0201U00ToolTipResponse{
    repeated XRT0201U00ToolTipInfo num = 1;
}
// [END] XRT0201U00

// [START] MIH
message XRT9001R05lay9005RRequest{
	optional string date = 1;
}

message XRT9001R05lay9005RResponse{
	repeated XRT9001R05lay9005RInfo items = 1;
}

message XRT9001R06lay9006RRequest{
	optional string date = 1;
}

message XRT9001R06lay9006RResponse{
	repeated XRT9001R06lay9006RInfo items = 1;
}

